<resources>
    <string name="app_name">PizzaOrderApp</string>
    <string name="pizza_time">Pizza Time!</string>
    <string name="sausage">Sausage</string>
    <string name="cheese">Cheese</string>
    <string name="apple">Apple</string>
    <string name="olives">Olives</string>
    <string name="choose_your_pizza">Choose your pizza</string>
    <string name="choose_extras">Choose Extras</string>
    <string name="pepsi">Pepsi</string>
    <string name="garlic">Garlic</string>
    <string name="fries">Fries</string>
    <string name="enter_tip_here_e_g_0">Enter Tip Here (e.g. 0)</string>
    <string name="calculate_price">Calculate Price</string>
</resources>
